bug: 10440 Fix for date shifting left on selection.
http://bugzilla.zimbra.com/show_bug.cgi?id=10440

--- a/Ajax/WebRoot/js/config/style/dwt.css
+++ b/Ajax/WebRoot/js/config/style/dwt.css
@@ -789,6 +789,8 @@
 
 .DwtCalendarDay-selected {
 	@SelectedBg@
+	/* center because dates shiftS left */
+	text-align:center;
 }
 
 .DwtCalendarDay-today {
